--- a/app/src/main/res/layout/activity_tabbed.xml
+++ b/app/src/main/res/layout/activity_tabbed.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="?android:attr/actionBarSize"
+    android:paddingTop="?attr/actionBarSize"
     >
     <android.support.v4.view.ViewPager  android:id="@+id/pager"
         android:layout_width="match_parent" android:layout_height="match_parent"
-        tools:context="com.spipi.spipimediaplayer.TabbedActivity" >
+        tools:context="com.spipi.spipimediaplayer.TabbedFragment" >
         <android.support.v4.view.PagerTabStrip
             android:id="@+id/pager_tab_strip"
             android:layout_width="match_parent"
