--- a/app/src/main/res/layout/fragment_network.xml
+++ b/app/src/main/res/layout/fragment_network.xml
@@ -4,6 +4,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.spipi.spipimediaplayer.network.ui.NetworkActivityFragment">
+    tools:context="com.spipi.spipimediaplayer.library.ui.NetworkActivityFragment">
 
 </RelativeLayout>
