--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:background="@android:color/white"
-    android:layout_height="match_parent" tools:context="com.spipi.spipimediaplayer.GenericFragment" android:layout_marginTop="?android:attr/actionBarSize">
+    android:layout_height="match_parent" tools:context="com.spipi.spipimediaplayer.GenericFragment" >
 
 
     <android.support.v7.widget.RecyclerView
