--- a/app/src/main/res/layout/fragment_artists_grid.xml
+++ b/app/src/main/res/layout/fragment_artists_grid.xml
@@ -1,19 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:background="@android:color/white"
-    android:layout_height="match_parent" tools:context="com.spipi.spipimediaplayer.GenericFragment">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="com.spipi.spipimediaplayer.GenericFragment">
 
-
-    <android.support.v7.widget.RecyclerView
-        android:focusable="false"
-        android:id="@+id/list"
+    <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" />
+        android:layout_height="wrap_content"
+        android:id="@+id/myToolbar" />
+
+    <FrameLayout  android:layout_width="match_parent"
+        android:background="@android:color/white"
+        android:layout_height="match_parent" >
 
 
-    <TextView android:id="@android:id/empty" android:layout_width="match_parent"
-        android:layout_height="match_parent" android:gravity="center" />
+        <android.support.v7.widget.RecyclerView
+            android:focusable="false"
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" />
 
-</FrameLayout>
+
+        <TextView android:id="@android:id/empty" android:layout_width="match_parent"
+            android:layout_height="match_parent" android:gravity="center" />
+
+    </FrameLayout>
+
+
+</LinearLayout>
